# caragic

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
admin/: .dockerignore  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
api/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml
api/app/: config.py  db.py  main.py
api/app/api/: admin.py  auth.py  chat_admin.py  chat_visitor.py  content.py  deps.py  submission.py  verify.py  visitor.py
api/app/core/: chat_connections.py  chat_service.py  client_ip.py  crypto.py  erasure_service.py  errors.py  mode_service.py  notifications_config.py  notifier.py  otp.py  owner_auth.py  owner_status.py  phone.py  rate_limit.py  security.py  submission_admin_service.py  submission_service.py  token_admin_service.py  token_service.py  verify_service.py  visitor_auth.py
api/app/models/: __init__.py  content.py  conversation.py  erasure_log.py  message.py  setting.py  submission.py  token.py  visitor.py
api/app/schemas/: __init__.py  admin.py  auth.py  chat.py  content.py  notifications.py  visitor.py
api/migrations/: env.py
api/migrations/versions/: 001_initial.py  002_rename_token_to_token_hash.py  003_tokens_and_settings.py  004_content_tables.py  005_lifecycle_states.py  006_submissions.py  007_erase_my_data.py  008_erasure_constraint.py  009_session_phone_verification.py  010_chat.py  011_chat_status.py
api/scripts/: create_token.py  seed_content.py  set_active_mode.py  totp_register.py
api/seeds/: content_v1.json
(+124 files in other folders)
